Update and rename portfolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LDT - portfolio</title>
-    <link rel="stylesheet" href="/assets/css/portfolio.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/portfolio.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">    
 </head>
 <body>
@@ -37,7 +37,7 @@
                     <div class="box-container">
                         <div class="w-img">
                             <picture>
-                                <a href=""><img src="/assets/img/anh1.jpg" alt=""></a>
+                                <a href=""><img src="assets/img/anh1.jpg" alt=""></a>
                             </picture>
                         </div>
                         <p>bấm vào ảnh để dẫn đến trang website</p>
@@ -49,7 +49,7 @@
                     <h2>Giới Thiệu</h2>
                     <div class="box-container">
                         <div class="avatar">
-                            <picture><img src="/assets/img/avatar.jpg" alt=""></picture>
+                            <picture><img src="assets/img/avatar.jpg" alt=""></picture>
                             <p>Lê Đức Thiện</p>
                         </div>
                         <p class="mySefl">Xin chào, mình là Lê Đức Thiện - tác giả của những nội dung tại website này. Rất vui được gặp bạn tại đây. Chúc bạn thu nhặt được nhiều kiến thức hữu ích tại blog của mình.</p>
@@ -81,42 +81,42 @@
                             <div class="box-img">
                                 <div class="image">
                                     <picture>
-                                    <img src="/assets/img/anh1.jpg" alt="">
+                                    <img src="assets/img/anh1.jpg" alt="">
                                 </picture>
                                 </div>
                             </div>
                             <div class="box-img">
                                 <div class="image">
                                     <picture>
-                                    <img src="/assets/img/anh2.jpg" alt="">
+                                    <img src="assets/img/anh2.jpg" alt="">
                                 </picture>
                                 </div>
                             </div>
                             <div class="box-img">
                                 <div class="image">
                                     <picture>
-                                    <img src="/assets/img/anh3.jpg" alt="">
+                                    <img src="assets/img/anh3.jpg" alt="">
                                 </picture>
                                 </div>
                             </div>
                             <div class="box-img">
                                 <div class="image">
                                     <picture>
-                                    <img src="/assets/img/anh4.jpg" alt="">
+                                    <img src="assets/img/anh4.jpg" alt="">
                                 </picture>
                                 </div>
                             </div>
                             <div class="box-img">
                                 <div class="image">
                                     <picture>
-                                    <img src="/assets/img/anh5.jpg" alt="">
+                                    <img src="assets/img/anh5.jpg" alt="">
                                 </picture>
                                 </div>
                             </div>
                             <div class="box-img">
                                 <div class="image">
                                     <picture>
-                                    <img src="/assets/img/anh6.jpg" alt="">
+                                    <img src="assets/img/anh6.jpg" alt="">
                                 </picture>
                                 </div>
                             </div>
