--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="contact">
                     <a href="https://www.facebook.com/thien.le.020904" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://github.com/leducthien11" title="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/ThienleDuc" title="GitHub"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </nav>
@@ -154,7 +154,7 @@
                 <div class="contact">
                     <a href="https://www.facebook.com/thien.le.020904" title="Facebook"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://github.com/leducthien11" title="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/ThienleDuc" title="GitHub"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
         </footer>
