--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="box-container">
                         <div class="w-img">
                             <picture>
-                                <a href=""><img src="assets/img/anh1.jpg" alt=""></a>
+                                <a href="https://thienleduc.github.io/baomoi/"><img src="assets/img/anh1.jpg" alt=""></a>
                             </picture>
                         </div>
                         <p>bấm vào ảnh để dẫn đến trang website</p>
