--- a/index.html
+++ b/index.html
@@ -159,6 +159,6 @@
             </div>
         </footer>
    </div>
-   <script src="/assets/js/navbar.js"></script>
+   <script src="assets/js/navbar.js"></script>
 </body>
 </html>
